Fixed homepage on narrow screens

--- a/style/cath.css
+++ b/style/cath.css
@@ -2,12 +2,6 @@
   display: flex;
   flex-direction: row;
 }
-@media (max-width: 800px) {
-  .bothprayers{
-    display: flex;
-    flex-direction: column;
-  }
-}
 
 body {
   background-color: lightgoldenrodyellow;
@@ -194,6 +188,13 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+  }
+  .home {
+    width: 90%;
+  }
+  .bothprayers{
+    display: flex;
     flex-direction: column;
   }
 }
